sqlparser/y.output

state 0
	$accept: .any_command $end 

	SELECT  shift 21
	INSERT  shift 22
	UPDATE  shift 23
	DELETE  shift 24
	DESC  shift 40
	SET  shift 25
	USE  shift 38
	BEGIN  shift 30
	COMMIT  shift 31
	ROLLBACK  shift 32
	REPLACE  shift 33
	ADMIN  shift 35
	CREATE  shift 26
	ALTER  shift 27
	DROP  shift 29
	RENAME  shift 28
	ANALYZE  shift 36
	SHOW  shift 34
	DESCRIBE  shift 41
	EXPLAIN  shift 39
	.  error

	any_command  goto 1
	command  goto 2
	select_statement  goto 3
	insert_statement  goto 4
	update_statement  goto 5
	delete_statement  goto 6
	set_statement  goto 7
	create_statement  goto 8
	alter_statement  goto 9
	rename_statement  goto 10
	drop_statement  goto 11
	analyze_statement  goto 18
	show_statement  goto 16
	desc_statement  goto 19
	use_statement  goto 20
	describe_choice  goto 37
	begin_statement  goto 12
	commit_statement  goto 13
	rollback_statement  goto 14
	replace_statement  goto 15
	admin_statement  goto 17

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.    (1)

	.  reduce 1 (src line 178)


state 3
	command:  select_statement.    (2)
	select_statement:  select_statement.union_op select_statement 

	UNION  shift 43
	MINUS  shift 44
	EXCEPT  shift 45
	INTERSECT  shift 46
	.  reduce 2 (src line 184)

	union_op  goto 42

state 4
	command:  insert_statement.    (3)

	.  reduce 3 (src line 189)


state 5
	command:  update_statement.    (4)

	.  reduce 4 (src line 190)


state 6
	command:  delete_statement.    (5)

	.  reduce 5 (src line 191)


state 7
	command:  set_statement.    (6)

	.  reduce 6 (src line 192)


state 8
	command:  create_statement.    (7)

	.  reduce 7 (src line 193)


state 9
	command:  alter_statement.    (8)

	.  reduce 8 (src line 194)


state 10
	command:  rename_statement.    (9)

	.  reduce 9 (src line 195)


state 11
	command:  drop_statement.    (10)

	.  reduce 10 (src line 196)


state 12
	command:  begin_statement.    (11)

	.  reduce 11 (src line 197)


state 13
	command:  commit_statement.    (12)

	.  reduce 12 (src line 198)


state 14
	command:  rollback_statement.    (13)

	.  reduce 13 (src line 199)


state 15
	command:  replace_statement.    (14)

	.  reduce 14 (src line 200)


state 16
	command:  show_statement.    (15)

	.  reduce 15 (src line 201)


state 17
	command:  admin_statement.    (16)

	.  reduce 16 (src line 202)


state 18
	command:  analyze_statement.    (17)

	.  reduce 17 (src line 203)


state 19
	command:  desc_statement.    (18)

	.  reduce 18 (src line 204)


state 20
	command:  use_statement.    (19)

	.  reduce 19 (src line 205)


state 21
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list 
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	$$162: .    (162)

	.  reduce 162 (src line 715)

	comment_opt  goto 47
	$$162  goto 48

state 22
	insert_statement:  INSERT.comment_opt into_opt dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT.comment_opt into_opt dml_table_expression SET update_list on_dup_opt 
	$$162: .    (162)

	.  reduce 162 (src line 715)

	comment_opt  goto 49
	$$162  goto 48

state 23
	update_statement:  UPDATE.comment_opt dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 
	$$162: .    (162)

	.  reduce 162 (src line 715)

	comment_opt  goto 50
	$$162  goto 48

state 24
	delete_statement:  DELETE.comment_opt FROM dml_table_expression where_expression_opt order_by_opt limit_opt 
	$$162: .    (162)

	.  reduce 162 (src line 715)

	comment_opt  goto 51
	$$162  goto 48

state 25
	set_statement:  SET.comment_opt global_session_opt update_list 
	set_statement:  SET.comment_opt NAMES charset_name 
	set_statement:  SET.comment_opt CHARACTER SET charset_name 
	$$162: .    (162)

	.  reduce 162 (src line 715)

	comment_opt  goto 52
	$$162  goto 48

state 26
	create_statement:  CREATE.DATABASE not_exists_opt ID force_eof 
	create_statement:  CREATE.constraint_opt INDEX sql_id using_opt ON ID force_eof 
	create_statement:  CREATE.VIEW sql_id force_eof 
	create_statement:  CREATE.FUNCTION sql_id force_eof 
	create_statement:  CREATE.temporary_opt TABLE not_exists_opt dml_table_expression ( ID force_eof 
	create_statement:  CREATE.temporary_opt TABLE not_exists_opt dml_table_expression ( create_def_list ) force_eof 
	create_statement:  CREATE.temporary_opt TABLE not_exists_opt dml_table_expression select_statement force_eof 
	constraint_opt: .    (344)
	temporary_opt: .    (333)

	FUNCTION  shift 56
	TEMPORARY  shift 59
	DATABASE  shift 53
	INDEX  reduce 344 (src line 1513)
	VIEW  shift 55
	UNIQUE  shift 58
	.  reduce 333 (src line 1486)

	temporary_opt  goto 57
	constraint_opt  goto 54

state 27
	alter_statement:  ALTER.ignore_opt TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE ID RENAME to_opt ID 
	alter_statement:  ALTER.VIEW sql_id force_eof 
	ignore_opt: .    (335)

	VIEW  shift 61
	IGNORE  shift 62
	.  reduce 335 (src line 1491)

	ignore_opt  goto 60

state 28
	rename_statement:  RENAME.TABLE ID TO ID 

	TABLE  shift 63
	.  error


state 29
	drop_statement:  DROP.TABLE exists_opt ID force_eof 
	drop_statement:  DROP.INDEX sql_id ON ID 
	drop_statement:  DROP.VIEW exists_opt ID force_eof 
	drop_statement:  DROP.FUNCTION exists_opt ID force_eof 
	drop_statement:  DROP.PROCEDURE exists_opt ID force_eof 

	FUNCTION  shift 67
	PROCEDURE  shift 68
	TABLE  shift 64
	INDEX  shift 65
	VIEW  shift 66
	.  error


state 30
	begin_statement:  BEGIN.    (38)

	.  reduce 38 (src line 296)


state 31
	commit_statement:  COMMIT.    (39)

	.  reduce 39 (src line 302)


state 32
	rollback_statement:  ROLLBACK.    (40)

	.  reduce 40 (src line 308)


state 33
	replace_statement:  REPLACE.comment_opt INTO dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE.comment_opt INTO dml_table_expression SET update_list 
	$$162: .    (162)

	.  reduce 162 (src line 715)

	comment_opt  goto 69
	$$162  goto 48

state 34
	show_statement:  SHOW.DATABASES 
	show_statement:  SHOW.TABLES from_opt like_or_where_opt 
	show_statement:  SHOW.PROXY sql_id from_opt like_or_where_opt 
	show_statement:  SHOW.VARIABLES like_or_where_opt force_eof 
	show_statement:  SHOW.TABLE STATUS from_opt like_or_where_opt 
	show_statement:  SHOW.CREATE TABLE dml_table_expression force_eof 
	show_statement:  SHOW.COLUMNS FROM dml_table_expression like_or_where_opt force_eof 
	show_statement:  SHOW.show_index_opt from_in_one dml_table_expression like_or_where_opt force_eof 
	show_statement:  SHOW.WARNINGS force_eof 
	show_statement:  SHOW.ERRORS force_eof 
	show_statement:  SHOW.global_session_opt STATUS like_or_where_opt force_eof 
	global_session_opt: .    (35)

	INDEXES  shift 82
	KEYS  shift 83
	GLOBAL  shift 84
	SESSION  shift 85
	DATABASES  shift 70
	TABLES  shift 71
	PROXY  shift 72
	COLUMNS  shift 76
	VARIABLES  shift 73
	CREATE  shift 75
	TABLE  shift 74
	INDEX  shift 81
	WARNINGS  shift 78
	ERRORS  shift 79
	.  reduce 35 (src line 289)

	global_session_opt  goto 80
	show_index_opt  goto 77

state 35
	admin_statement:  ADMIN.sql_id ( value_expression_list ) 

	ID  shift 87
	.  error

	sql_id  goto 86

state 36
	analyze_statement:  ANALYZE.TABLE ID 

	TABLE  shift 88
	.  error


state 37
	desc_statement:  describe_choice.dml_table_expression force_eof 
	desc_statement:  describe_choice.desc_type_opt select_statement 
	desc_type_opt: .    (156)

	ID  shift 91
	EXTENDED  shift 92
	PARTITIONS  shift 93
	.  reduce 156 (src line 698)

	dml_table_expression  goto 89
	desc_type_opt  goto 90

state 38
	use_statement:  USE.ID force_eof 

	ID  shift 94
	.  error


state 39
	describe_choice:  EXPLAIN.    (159)

	.  reduce 159 (src line 705)


state 40
	describe_choice:  DESC.    (160)

	.  reduce 160 (src line 708)


state 41
	describe_choice:  DESCRIBE.    (161)

	.  reduce 161 (src line 711)


state 42
	select_statement:  select_statement union_op.select_statement 

	SELECT  shift 21
	.  error

	select_statement  goto 95

state 43
	union_op:  UNION.    (166)
	union_op:  UNION.ALL 

	ALL  shift 96
	.  reduce 166 (src line 734)


state 44
	union_op:  MINUS.    (168)

	.  reduce 168 (src line 743)


state 45
	union_op:  EXCEPT.    (169)

	.  reduce 169 (src line 747)


state 46
	union_op:  INTERSECT.    (170)

	.  reduce 170 (src line 751)


state 47
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list 
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	distinct_opt: .    (171)

	DISTINCT  shift 98
	.  reduce 171 (src line 756)

	distinct_opt  goto 97

state 48
	comment_opt:  $$162.comment_list 
	comment_list: .    (164)

	.  reduce 164 (src line 725)

	comment_list  goto 99

state 49
	insert_statement:  INSERT comment_opt.into_opt dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt.into_opt dml_table_expression SET update_list on_dup_opt 
	into_opt: .    (327)

	INTO  shift 101
	.  reduce 327 (src line 1471)

	into_opt  goto 100

state 50
	update_statement:  UPDATE comment_opt.dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 91
	.  error

	dml_table_expression  goto 102

state 51
	delete_statement:  DELETE comment_opt.FROM dml_table_expression where_expression_opt order_by_opt limit_opt 

	FROM  shift 103
	.  error


state 52
	set_statement:  SET comment_opt.global_session_opt update_list 
	set_statement:  SET comment_opt.NAMES charset_name 
	set_statement:  SET comment_opt.CHARACTER SET charset_name 
	global_session_opt: .    (35)

	GLOBAL  shift 84
	SESSION  shift 85
	NAMES  shift 105
	CHARACTER  shift 106
	.  reduce 35 (src line 289)

	global_session_opt  goto 104

state 53
	create_statement:  CREATE DATABASE.not_exists_opt ID force_eof 
	not_exists_opt: .    (331)

	IF  shift 108
	.  reduce 331 (src line 1481)

	not_exists_opt  goto 107

state 54
	create_statement:  CREATE constraint_opt.INDEX sql_id using_opt ON ID force_eof 

	INDEX  shift 109
	.  error


state 55
	create_statement:  CREATE VIEW.sql_id force_eof 

	ID  shift 87
	.  error

	sql_id  goto 110

state 56
	create_statement:  CREATE FUNCTION.sql_id force_eof 

	ID  shift 87
	.  error

	sql_id  goto 111

state 57
	create_statement:  CREATE temporary_opt.TABLE not_exists_opt dml_table_expression ( ID force_eof 
	create_statement:  CREATE temporary_opt.TABLE not_exists_opt dml_table_expression ( create_def_list ) force_eof 
	create_statement:  CREATE temporary_opt.TABLE not_exists_opt dml_table_expression select_statement force_eof 

	TABLE  shift 112
	.  error


state 58
	constraint_opt:  UNIQUE.    (345)

	.  reduce 345 (src line 1515)


state 59
	temporary_opt:  TEMPORARY.    (334)

	.  reduce 334 (src line 1488)


state 60
	alter_statement:  ALTER ignore_opt.TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt.TABLE ID RENAME to_opt ID 

	TABLE  shift 113
	.  error


state 61
	alter_statement:  ALTER VIEW.sql_id force_eof 

	ID  shift 87
	.  error

	sql_id  goto 114

state 62
	ignore_opt:  IGNORE.    (336)

	.  reduce 336 (src line 1493)


state 63
	rename_statement:  RENAME TABLE.ID TO ID 

	ID  shift 115
	.  error


state 64
	drop_statement:  DROP TABLE.exists_opt ID force_eof 
	exists_opt: .    (329)

	IF  shift 117
	.  reduce 329 (src line 1476)

	exists_opt  goto 116

state 65
	drop_statement:  DROP INDEX.sql_id ON ID 

	ID  shift 87
	.  error

	sql_id  goto 118

state 66
	drop_statement:  DROP VIEW.exists_opt ID force_eof 
	exists_opt: .    (329)

	IF  shift 117
	.  reduce 329 (src line 1476)

	exists_opt  goto 119

state 67
	drop_statement:  DROP FUNCTION.exists_opt ID force_eof 
	exists_opt: .    (329)

	IF  shift 117
	.  reduce 329 (src line 1476)

	exists_opt  goto 120

state 68
	drop_statement:  DROP PROCEDURE.exists_opt ID force_eof 
	exists_opt: .    (329)

	IF  shift 117
	.  reduce 329 (src line 1476)

	exists_opt  goto 121

state 69
	replace_statement:  REPLACE comment_opt.INTO dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE comment_opt.INTO dml_table_expression SET update_list 

	INTO  shift 122
	.  error


state 70
	show_statement:  SHOW DATABASES.    (42)

	.  reduce 42 (src line 320)


state 71
	show_statement:  SHOW TABLES.from_opt like_or_where_opt 
	from_opt: .    (222)

	FROM  shift 124
	.  reduce 222 (src line 984)

	from_opt  goto 123

state 72
	show_statement:  SHOW PROXY.sql_id from_opt like_or_where_opt 

	ID  shift 87
	.  error

	sql_id  goto 125

state 73
	show_statement:  SHOW VARIABLES.like_or_where_opt force_eof 
	like_or_where_opt: .    (219)

	WHERE  shift 127
	LIKE  shift 128
	.  reduce 219 (src line 971)

	like_or_where_opt  goto 126

state 74
	show_statement:  SHOW TABLE.STATUS from_opt like_or_where_opt 

	STATUS  shift 129
	.  error


state 75
	show_statement:  SHOW CREATE.TABLE dml_table_expression force_eof 

	TABLE  shift 130
	.  error


state 76
	show_statement:  SHOW COLUMNS.FROM dml_table_expression like_or_where_opt force_eof 

	FROM  shift 131
	.  error


state 77
	show_statement:  SHOW show_index_opt.from_in_one dml_table_expression like_or_where_opt force_eof 

	FROM  shift 133
	IN  shift 134
	.  error

	from_in_one  goto 132

state 78
	show_statement:  SHOW WARNINGS.force_eof 
	force_eof: .    (349)

	.  reduce 349 (src line 1529)

	force_eof  goto 135

state 79
	show_statement:  SHOW ERRORS.force_eof 
	force_eof: .    (349)

	.  reduce 349 (src line 1529)

	force_eof  goto 136

state 80
	show_statement:  SHOW global_session_opt.STATUS like_or_where_opt force_eof 

	STATUS  shift 137
	.  error


state 81
	show_index_opt:  INDEX.    (53)

	.  reduce 53 (src line 364)


state 82
	show_index_opt:  INDEXES.    (54)

	.  reduce 54 (src line 367)


state 83
	show_index_opt:  KEYS.    (55)

	.  reduce 55 (src line 369)


state 84
	global_session_opt:  GLOBAL.    (36)

	.  reduce 36 (src line 291)


state 85
	global_session_opt:  SESSION.    (37)

	.  reduce 37 (src line 293)


state 86
	admin_statement:  ADMIN sql_id.( value_expression_list ) 

	(  shift 138
	.  error


state 87
	sql_id:  ID.    (348)

	.  reduce 348 (src line 1523)


state 88
	analyze_statement:  ANALYZE TABLE.ID 

	ID  shift 139
	.  error


state 89
	desc_statement:  describe_choice dml_table_expression.force_eof 
	force_eof: .    (349)

	.  reduce 349 (src line 1529)

	force_eof  goto 140

state 90
	desc_statement:  describe_choice desc_type_opt.select_statement 

	SELECT  shift 21
	.  error

	select_statement  goto 141

state 91
	dml_table_expression:  ID.    (209)
	dml_table_expression:  ID.. ID 

	.  shift 142
	.  reduce 209 (src line 925)


state 92
	desc_type_opt:  EXTENDED.    (157)

	.  reduce 157 (src line 700)


state 93
	desc_type_opt:  PARTITIONS.    (158)

	.  reduce 158 (src line 702)


state 94
	use_statement:  USE ID.force_eof 
	force_eof: .    (349)

	.  reduce 349 (src line 1529)

	force_eof  goto 143

state 95
	select_statement:  select_statement.union_op select_statement 
	select_statement:  select_statement union_op select_statement.    (22)

	.  reduce 22 (src line 216)

	union_op  goto 42

state 96
	union_op:  UNION ALL.    (167)

	.  reduce 167 (src line 739)


state 97
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list 
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	EXISTS  shift 161
	NULL  shift 165
	VALUES  shift 171
	ID  shift 148
	STRING  shift 162
	NUMBER  shift 163
	VALUE_ARG  shift 164
	(  shift 153
	~  shift 169
	NOT  shift 152
	+  shift 167
	-  shift 168
	*  shift 146
	CASE  shift 173
	DATABASE  shift 172
	IF  shift 170
	.  error

	select_expression_list  goto 144
	select_expression  goto 145
	expression  goto 147
	boolean_expression  goto 149
	condition  goto 151
	value  goto 154
	value_expression  goto 150
	row_tuple  goto 156
	keyword_as_func  goto 159
	subquery  goto 166
	unary_operator  goto 157
	column_name  goto 155
	case_expression  goto 160
	sql_id  goto 158

state 98
	distinct_opt:  DISTINCT.    (172)

	.  reduce 172 (src line 760)


state 99
	comment_opt:  $$162 comment_list.    (163)
	comment_list:  comment_list.COMMENT 

	COMMENT  shift 174
	.  reduce 163 (src line 719)


state 100
	insert_statement:  INSERT comment_opt into_opt.dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt into_opt.dml_table_expression SET update_list on_dup_opt 

	ID  shift 91
	.  error

	dml_table_expression  goto 175

state 101
	into_opt:  INTO.    (328)

	.  reduce 328 (src line 1473)


state 102
	update_statement:  UPDATE comment_opt dml_table_expression.SET update_list where_expression_opt order_by_opt limit_opt 

	SET  shift 176
	.  error


state 103
	delete_statement:  DELETE comment_opt FROM.dml_table_expression where_expression_opt order_by_opt limit_opt 

	ID  shift 91
	.  error

	dml_table_expression  goto 177

state 104
	set_statement:  SET comment_opt global_session_opt.update_list 

	ID  shift 182
	.  error

	column_name  goto 180
	update_list  goto 178
	update_expression  goto 179
	sql_id  goto 181

state 105
	set_statement:  SET comment_opt NAMES.charset_name 

	DEFAULT  shift 186
	ID  shift 184
	STRING  shift 185
	.  error

	charset_name  goto 183

state 106
	set_statement:  SET comment_opt CHARACTER.SET charset_name 

	SET  shift 187
	.  error


state 107
	create_statement:  CREATE DATABASE not_exists_opt.ID force_eof 

	ID  shift 188
	.  error


state 108
	not_exists_opt:  IF.NOT EXISTS 

	NOT  shift 189
	.  error


state 109
	create_statement:  CREATE constraint_opt INDEX.sql_id using_opt ON ID force_eof 

	ID  shift 87
	.  error

	sql_id  goto 190

state 110
	create_statement:  CREATE VIEW sql_id.force_eof 
	force_eof: .    (349)

	.  reduce 349 (src line 1529)

	force_eof  goto 191

state 111
	create_statement:  CREATE FUNCTION sql_id.force_eof 
	force_eof: .    (349)

	.  reduce 349 (src line 1529)

	force_eof  goto 192

state 112
	create_statement:  CREATE temporary_opt TABLE.not_exists_opt dml_table_expression ( ID force_eof 
	create_statement:  CREATE temporary_opt TABLE.not_exists_opt dml_table_expression ( create_def_list ) force_eof 
	create_statement:  CREATE temporary_opt TABLE.not_exists_opt dml_table_expression select_statement force_eof 
	not_exists_opt: .    (331)

	IF  shift 108
	.  reduce 331 (src line 1481)

	not_exists_opt  goto 193

state 113
	alter_statement:  ALTER ignore_opt TABLE.ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE.ID RENAME to_opt ID 

	ID  shift 194
	.  error


state 114
	alter_statement:  ALTER VIEW sql_id.force_eof 
	force_eof: .    (349)

	.  reduce 349 (src line 1529)

	force_eof  goto 195

state 115
	rename_statement:  RENAME TABLE ID.TO ID 

	TO  shift 196
	.  error


state 116
	drop_statement:  DROP TABLE exists_opt.ID force_eof 

	ID  shift 197
	.  error


state 117
	exists_opt:  IF.EXISTS 

	EXISTS  shift 198
	.  error


state 118
	drop_statement:  DROP INDEX sql_id.ON ID 

	ON  shift 199
	.  error


state 119
	drop_statement:  DROP VIEW exists_opt.ID force_eof 

	ID  shift 200
	.  error


state 120
	drop_statement:  DROP FUNCTION exists_opt.ID force_eof 

	ID  shift 201
	.  error


state 121
	drop_statement:  DROP PROCEDURE exists_opt.ID force_eof 

	ID  shift 202
	.  error


state 122
	replace_statement:  REPLACE comment_opt INTO.dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE comment_opt INTO.dml_table_expression SET update_list 

	ID  shift 91
	.  error

	dml_table_expression  goto 203

state 123
	show_statement:  SHOW TABLES from_opt.like_or_where_opt 
	like_or_where_opt: .    (219)

	WHERE  shift 127
	LIKE  shift 128
	.  reduce 219 (src line 971)

	like_or_where_opt  goto 204

state 124
	from_opt:  FROM.value_expression 

	NULL  shift 165
	VALUES  shift 171
	ID  shift 182
	STRING  shift 162
	NUMBER  shift 163
	VALUE_ARG  shift 164
	(  shift 206
	~  shift 169
	+  shift 167
	-  shift 168
	CASE  shift 173
	DATABASE  shift 172
	IF  shift 170
	.  error

	value  goto 154
	value_expression  goto 205
	row_tuple  goto 156
	keyword_as_func  goto 159
	subquery  goto 166
	unary_operator  goto 157
	column_name  goto 155
	case_expression  goto 160
	sql_id  goto 158

state 125
	show_statement:  SHOW PROXY sql_id.from_opt like_or_where_opt 
	from_opt: .    (222)

	FROM  shift 124
	.  reduce 222 (src line 984)

	from_opt  goto 207

state 126
	show_statement:  SHOW VARIABLES like_or_where_opt.force_eof 
	force_eof: .    (349)

	.  reduce 349 (src line 1529)

	force_eof  goto 208

state 127
	like_or_where_opt:  WHERE.boolean_expression 

	EXISTS  shift 161
	NULL  shift 165
	VALUES  shift 171
	ID  shift 182
	STRING  shift 162
	NUMBER  shift 163
	VALUE_ARG  shift 164
	(  shift 153
	~  shift 169
	NOT  shift 152
	+  shift 167
	-  shift 168
	CASE  shift 173
	DATABASE  shift 172
	IF  shift 170
	.  error

	boolean_expression  goto 209
	condition  goto 151
	value  goto 154
	value_expression  goto 210
	row_tuple  goto 156
	keyword_as_func  goto 159
	subquery  goto 166
	unary_operator  goto 157
	column_name  goto 155
	case_expression  goto 160
	sql_id  goto 158

state 128
	like_or_where_opt:  LIKE.value_expression 

	NULL  shift 165
	VALUES  shift 171
	ID  shift 182
	STRING  shift 162
	NUMBER  shift 163
	VALUE_ARG  shift 164
	(  shift 206
	~  shift 169
	+  shift 167
	-  shift 168
	CASE  shift 173
	DATABASE  shift 172
	IF  shift 170
	.  error

	value  goto 154
	value_expression  goto 211
	row_tuple  goto 156
	keyword_as_func  goto 159
	subquery  goto 166
	unary_operator  goto 157
	column_name  goto 155
	case_expression  goto 160
	sql_id  goto 158

state 129
	show_statement:  SHOW TABLE STATUS.from_opt like_or_where_opt 
	from_opt: .    (222)

	FROM  shift 124
	.  reduce 222 (src line 984)

	from_opt  goto 212

state 130
	show_statement:  SHOW CREATE TABLE.dml_table_expression force_eof 

	ID  shift 91
	.  error

	dml_table_expression  goto 213

state 131
	show_statement:  SHOW COLUMNS FROM.dml_table_expression like_or_where_opt force_eof 

	ID  shift 91
	.  error

	dml_table_expression  goto 214

state 132
	show_statement:  SHOW show_index_opt from_in_one.dml_table_expression like_or_where_opt force_eof 

	ID  shift 91
	.  error

	dml_table_expression  goto 215

state 133
	from_in_one:  FROM.    (56)

	.  reduce 56 (src line 372)


state 134
	from_in_one:  IN.    (57)

	.  reduce 57 (src line 375)


state 135
	show_statement:  SHOW WARNINGS force_eof.    (50)

	.  reduce 50 (src line 351)


state 136
	show_statement:  SHOW ERRORS force_eof.    (51)

	.  reduce 51 (src line 355)


state 137
	show_statement:  SHOW global_session_opt STATUS.like_or_where_opt force_eof 
	like_or_where_opt: .    (219)

	WHERE  shift 127
	LIKE  shift 128
	.  reduce 219 (src line 971)

	like_or_where_opt  goto 216

state 138
	admin_statement:  ADMIN sql_id (.value_expression_list ) 

	NULL  shift 165
	VALUES  shift 171
	ID  shift 182
	STRING  shift 162
	NUMBER  shift 163
	VALUE_ARG  shift 164
	(  shift 206
	~  shift 169
	+  shift 167
	-  shift 168
	CASE  shift 173
	DATABASE  shift 172
	IF  shift 170
	.  error

	value  goto 154
	value_expression  goto 218
	value_expression_list  goto 217
	row_tuple  goto 156
	keyword_as_func  goto 159
	subquery  goto 166
	unary_operator  goto 157
	column_name  goto 155
	case_expression  goto 160
	sql_id  goto 158

state 139
	analyze_statement:  ANALYZE TABLE ID.    (152)

	.  reduce 152 (src line 676)


state 140
	desc_statement:  describe_choice dml_table_expression force_eof.    (154)

	.  reduce 154 (src line 688)


state 141
	select_statement:  select_statement.union_op select_statement 
	desc_statement:  describe_choice desc_type_opt select_statement.    (155)

	UNION  shift 43
	MINUS  shift 44
	EXCEPT  shift 45
	INTERSECT  shift 46
	.  reduce 155 (src line 693)

	union_op  goto 42

state 142
	dml_table_expression:  ID ..ID 

	ID  shift 219
	.  error


state 143
	use_statement:  USE ID force_eof.    (153)

	.  reduce 153 (src line 682)


state 144
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.    (20)
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	select_expression_list:  select_expression_list., select_expression 

	FROM  shift 220
	,  shift 221
	.  reduce 20 (src line 207)


state 145
	select_expression_list:  select_expression.    (173)

	.  reduce 173 (src line 765)


state 146
	select_expression:  *.    (175)

	.  reduce 175 (src line 775)


state 147
	select_expression:  expression.as_lower_opt 
	as_lower_opt: .    (180)

	AS  shift 224
	ID  shift 87
	.  reduce 180 (src line 799)

	as_lower_opt  goto 222
	sql_id  goto 223

state 148
	select_expression:  ID.. * 
	column_name:  ID.. sql_id 
	sql_id:  ID.    (348)

	.  shift 225
	.  reduce 348 (src line 1523)


state 149
	expression:  boolean_expression.    (178)
	boolean_expression:  boolean_expression.AND boolean_expression 
	boolean_expression:  boolean_expression.OR boolean_expression 

	OR  shift 227
	AND  shift 226
	.  reduce 178 (src line 789)


state 150
	expression:  value_expression.    (179)
	condition:  value_expression.compare value_expression 
	condition:  value_expression.IN col_tuple 
	condition:  value_expression.NOT IN col_tuple 
	condition:  value_expression.LIKE value_expression 
	condition:  value_expression.NOT LIKE value_expression 
	condition:  value_expression.BETWEEN value_expression AND value_expression 
	condition:  value_expression.NOT BETWEEN value_expression AND value_expression 
	condition:  value_expression.IS NULL 
	condition:  value_expression.IS NOT NULL 
	value_expression:  value_expression.& value_expression 
	value_expression:  value_expression.| value_expression 
	value_expression:  value_expression.^ value_expression 
	value_expression:  value_expression.+ value_expression 
	value_expression:  value_expression.- value_expression 
	value_expression:  value_expression.* value_expression 
	value_expression:  value_expression./ value_expression 
	value_expression:  value_expression.% value_expression 
	value_expression:  value_expression.USING sql_id 
	value_expression:  value_expression.| | value_expression 

	IN  shift 229
	IS  shift 233
	LIKE  shift 231
	BETWEEN  shift 232
	LE  shift 246
	GE  shift 247
	NE  shift 248
	NULL_SAFE_EQUAL  shift 249
	=  shift 243
	<  shift 244
	>  shift 245
	NOT  shift 230
	&  shift 234
	|  shift 235
	^  shift 236
	+  shift 237
	-  shift 238
	*  shift 239
	/  shift 240
	%  shift 241
	USING  shift 242
	.  reduce 179 (src line 794)

	compare  goto 228

state 151
	boolean_expression:  condition.    (224)

	.  reduce 224 (src line 993)


state 152
	boolean_expression:  NOT.boolean_expression 

	EXISTS  shift 161
	NULL  shift 165
	VALUES  shift 171
	ID  shift 182
	STRING  shift 162
	NUMBER  shift 163
	VALUE_ARG  shift 164
	(  shift 153
	~  shift 169
	NOT  shift 152
	+  shift 167
	-  shift 168
	CASE  shift 173
	DATABASE  shift 172
	IF  shift 170
	.  error

	boolean_expression  goto 250
	condition  goto 151
	value  goto 154
	value_expression  goto 210
	row_tuple  goto 156
	keyword_as_func  goto 159
	subquery  goto 166
	unary_operator  goto 157
	column_name  goto 155
	case_expression  goto 160
	sql_id  goto 158

state 153
	boolean_expression:  (.boolean_expression ) 
	subquery:  (.select_statement ) 
	row_tuple:  (.value_expression_list ) 
	row_tuple:  (.) 

	SELECT  shift 21
	EXISTS  shift 161
	NULL  shift 165
	VALUES  shift 171
	ID  shift 182
	STRING  shift 162
	NUMBER  shift 163
	VALUE_ARG  shift 164
	(  shift 153
	~  shift 169
	NOT  shift 152
	+  shift 167
	-  shift 168
	CASE  shift 173
	DATABASE  shift 172
	IF  shift 170
	)  shift 254
	.  error

	select_statement  goto 252
	boolean_expression  goto 251
	condition  goto 151
	value  goto 154
	value_expression  goto 255
	value_expression_list  goto 253
	row_tuple  goto 156
	keyword_as_func  goto 159
	subquery  goto 166
	unary_operator  goto 157
	column_name  goto 155
	case_expression  goto 160
	sql_id  goto 158

state 154
	value_expression:  value.    (252)

	.  reduce 252 (src line 1114)


state 155
	value_expression:  column_name.    (253)

	.  reduce 253 (src line 1119)


state 156
	value_expression:  row_tuple.    (254)

	.  reduce 254 (src line 1123)


state 157
	value_expression:  unary_operator.value_expression 

	NULL  shift 165
	VALUES  shift 171
	ID  shift 182
	STRING  shift 162
	NUMBER  shift 163
	VALUE_ARG  shift 164
	(  shift 206
	~  shift 169
	+  shift 167
	-  shift 168
	CASE  shift 173
	DATABASE  shift 172
	IF  shift 170
	.  error

	value  goto 154
	value_expression  goto 256
	row_tuple  goto 156
	keyword_as_func  goto 159
	subquery  goto 166
	unary_operator  goto 157
	column_name  goto 155
	case_expression  goto 160
	sql_id  goto 158

state 158
	value_expression:  sql_id.( ) 
	value_expression:  sql_id.( select_expression_list ) 
	value_expression:  sql_id.( DISTINCT select_expression_list ) 
	column_name:  sql_id.    (286)

	(  shift 257
	.  reduce 286 (src line 1271)


state 159
	value_expression:  keyword_as_func.( select_expression_list ) 
	value_expression:  keyword_as_func.( ) 

	(  shift 258
	.  error


state 160
	value_expression:  case_expression.    (271)

	.  reduce 271 (src line 1198)


state 161
	condition:  EXISTS.subquery 

	(  shift 260
	.  error

	subquery  goto 259

state 162
	value:  STRING.    (288)

	.  reduce 288 (src line 1281)


state 163
	value:  NUMBER.    (289)

	.  reduce 289 (src line 1286)


state 164
	value:  VALUE_ARG.    (290)

	.  reduce 290 (src line 1290)


state 165
	value:  NULL.    (291)

	.  reduce 291 (src line 1294)


state 166
	row_tuple:  subquery.    (323)

	.  reduce 323 (src line 1450)


state 167
	unary_operator:  +.    (275)

	.  reduce 275 (src line 1217)


state 168
	unary_operator:  -.    (276)

	.  reduce 276 (src line 1222)


state 169
	unary_operator:  ~.    (277)

	.  reduce 277 (src line 1226)


state 170
	keyword_as_func:  IF.    (272)
